src/index.css
@import 'tailwindcss';

@theme {
  --color-accent: #ffcc33;

  --shadow-card: 0 0 15px 6px rgb(0 0 0 / 0.25);
}

* {
  -webkit-tap-highlight-color: transparent;
  scroll-behavior: smooth !important;
  scrollbar-color: transparent !important;
  scrollbar-width: none !important;
}

body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body::before {
  position: fixed;
  left: 0;
  top: 0;
  background: url(/img/bgTexture.jpg) 0 0;
  background-size: 500px 500px;
  content: '';
  width: 100%;
  height: calc(100% + 100px);
  z-index: 0;
}

.bg-noise {
  position: fixed;
  top: -50%;
  left: -50%;
  right: -50%;
  bottom: -50%;
  width: 200dvw;
  height: 200dvh;
  background: transparent url('/img/noise.png') repeat 0 0;
  background-repeat: repeat;
  background-size: 250px 250px;
  /* animation: bg-animation 0.55 s infinite; */
  opacity: 0.9;
  visibility: visible;
  will-change: transform;
  pointer-events: none;
}

@keyframes bg-animation {
  0% {
    transform: translate(0, 0);
  }
  10% {
    transform: translate(-5%, -5%);
  }
  20% {
    transform: translate(-10%, 5%);
  }
  30% {
    transform: translate(5%, -10%);
  }
  40% {
    transform: translate(-5%, 15%);
  }
  50% {
    transform: translate(-10%, 5%);
  }
  60% {
    transform: translate(15%, 0);
  }
  70% {
    transform: translate(0, 10%);
  }
  80% {
    transform: translate(-15%, 0);
  }
  90% {
    transform: translate(10%, 5%);
  }
  100% {
    transform: translate(5%, 0);
  }
}

.h-screen {
  height: 100dvh;
}

.w-screen {
  width: 100dvw;
}

span {
  text-decoration: underline wavy transparent;
}

::selection {
  text-decoration: underline wavy var(--color-accent);
  color: var(--color-accent);
  background: transparent;
}

::-webkit-scrollbar {
  display: none !important;
  -ms-overflow-style: none !important;
  scrollbar-width: none !important;
  width: 0 !important;
  background: none !important;
}

.bg-isometric {
  background-image: radial-gradient(black 2px, transparent 2px);
  background-size: 13px 13px;
}

.noise-filter {
  height: 100%;
  background:
    linear-gradient(20deg, black, transparent),
    url(https://grainy-gradients.vercel.app/noise.svg);
  filter: contrast(170%) brightness(1000%);
}

.windy-animation {
  animation: windy-image 2s infinite alternate;
  transform-origin: center bottom;
}

@keyframes windy-image {
  to {
    transform: skewX(-7deg);
  }
}

